# ai_agents

./: .gitignore  01_notes  01_notes.md  notes.md
01_llm_api/: 01_notes.md
01_llm_api/01_homework/: main.py  pyproject.toml
02_database/: 02_notes.md
03_cmp/: 03_noted.md
04_n8n/: 04_notes.md  Verify_answer.json
05_custom_agent/: 05_notes.md
07_agents/: main.py  mcp_server.py  pyproject.toml
08_vireual_agent_cpu/: 08_notes.md
10_rl_hw/: README.md  constants.py  env.py  main.py  pyproject.toml  q_learning_q_table.npy  training.py
